--- a/config
+++ b/config
@@ -2,18 +2,18 @@
 
 TESTDIR="."
 R=$RANDOM
-OUTPUTFILE="youroutput.txt"
-EXPECTED="expected.txt"
+YOUR_OUTPUT="your_output.txt"
+EXPECTED_OUTPUT="expected_output.txt"
 DIFF="diff.txt"
-ERROROUTPUTFILE="error.txt"
-ERROREXPECTED="errorexpected.txt"
+YOUR_ERROR="your_error.txt"
+EXPECTED_ERROR="expected_error.txt"
 HSH="./hsh"
 SLEEP=`which sleep`
 SLEEPSECONDS=1
 LTRACE=`which ltrace`
 LTRACEOUTPUTFILE="checker_ltrace_output_$R"
 
-# Testing color scheme
+# Pass/fail color scheme
 RED="\e[31m"
 GREEN="\e[92m"
 RESET="\e[0m"
