Adds more helper functions to shellfish script

--- a/config
+++ b/config
@@ -4,10 +4,11 @@ TESTDIR="."
 R=$RANDOM
 YOUR_OUTPUT="your_output.txt"
 EXPECTED_OUTPUT="expected_output.txt"
-DIFF="diff.txt"
+OUTPUT_DIFF="output_diff.txt"
 YOUR_ERROR="your_error.txt"
 EXPECTED_ERROR="expected_error.txt"
-HSH="./hsh"
+ERROR_DIFF="error_diff.txt"
+SHELL="./hsh"
 SLEEP=`which sleep`
 SLEEPSECONDS=1
 LTRACE=`which ltrace`
